<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GRCBoxRules</string>
    <string name="action_settings">Settings</string>
    <string name="action_close">Close and Disconnect</string>
    <string name="action_update">Update List</string>
    <string name="action_add_rule">Add New Rule</string>
    <string name="action_rm_rule">Remove Rule</string>
    <string name="action_load_profile">Load Profile</string>
    <string name="action_save_profile">Save As Profile</string>
    <string name="action_forget">Forget Ssid</string>
    <string name="state_connected">Connected</string>
    <string name="state_disconnected">Disconnected</string>
    <string name="rules">My Rules</string>
    <string name="apps">Apps</string>
    <string name="interfaces">Ifaces</string>
    <string name="title_activity_new_rule">New Rule</string>
    <string name="rule_type">Type:</string>
    <string name="rule_name">Name:</string>
    <string name="rule_name_hint">Name of this rule (locally used)</string>
    <string name="rule_iface">Interface:</string>
    <string name="rule_address">Remote Address:</string>
    <string name="rule_plugin">MultiCast Plugin:</string>
    <string name="rule_address_hint">Hostname or IP</string>
    <string name="rule_port">Port:</string>
    <string name="rule_port_hint">Port Num</string>
    <string name="rule_proto">Proto:</string>
    <string name="button_save">Save</string>
    <string name="iface_status">Iface Status:</string>
    <string name="title_activity_ap_list">Network List</string>
    <string name="hello_world">Hello world!</string>
	<string name="pass">Password</string>
	<string name="autoconnect">Auto</string>
</resources>
