<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.upv.grc.grcbox.android.MainActivity" >
    
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/action_update"/>
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"
        android:title="@string/action_add_rule"/>

    <item
        android:id="@+id/action_load_profile"
        android:showAsAction="never"
        android:title="@string/action_load_profile"/>
    <item
        android:id="@+id/action_close"
        android:showAsAction="never"
        android:title="@string/action_close"/>
</menu>
